# cliMEM

./: .gitignore  FUNCTIONAL_INVENTORY.md  PROJECT_AUDIT.md  README.md  graph_after_recall.html  pyproject.toml  requirements.txt
app/: agents.py  chat_log.py  cli.py  config.py  cues.py  filetree.py  filter.py  main.py  memory.py  parsers.py  proxy.py  session.py  storage.py  utils.py
app/agent_handlers/: __init__.py  _utils.py  claude.py  codex.py  opencode.py
scripts/: check_claude.py  recall_sample.py  remember_sample.py  view_memory.py
test/: test_cognee.py
