[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "climem"
version = "0.1.0"
description = "Memory-aware wrapper for CLI coding agents"
requires-python = ">=3.10"

[project.scripts]
climem = "app.cli:main"

[tool.setuptools.packages.find]
include = ["app*"]